--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "test": "yarn start",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "cron": "^2.3.1",
     "dotenv": "^16.0.3",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/cron": "^2.0.1",
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1"
   }
